--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
     ]
   },
   "engines": {
-    "node": "22.x",
-    "npm": "11.x"
+    "node": "22.x"
   },
   "volta": {
     "node": "22.13.1",
