--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@langchain/core": "^0.3.57",
     "@mantine/core": "^8.1.0",
     "@mantine/hooks": "^8.1.0",
+    "@mcansh/remix-fastify": "^4.1.0",
     "@mjackson/form-data-parser": "^0.8.0",
     "@react-router/node": "^7.0.0",
     "@tabler/icons-react": "^3.29.0",
