--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "prettier": "prettier --write .",
-    "start": "node --enable-source-maps ./server.js",
+    "start": "node ./server.js",
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc",
@@ -51,6 +51,8 @@
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/lib-storage": "^3.740.0",
     "@fastify/early-hints": "^1.0.1",
+    "@fastify/formbody": "^8.0.2",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/static": "^8.2.0",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.57",
