--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "prettier": "prettier --write .",
-    "start": "node ./server.js",
+    "start": "NODE_ENV=production node server.js",
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc",
-    "prepare": "husky install",
+    "prepare": "husky",
     "precommit": "lint-staged"
   },
   "keywords": [
@@ -50,10 +50,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/lib-storage": "^3.740.0",
-    "@fastify/early-hints": "^1.0.1",
     "@fastify/formbody": "^8.0.2",
     "@fastify/multipart": "^9.0.3",
-    "@fastify/static": "^8.2.0",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.57",
     "@mantine/core": "^8.1.0",
@@ -62,12 +60,10 @@
     "@mjackson/form-data-parser": "^0.8.0",
     "@react-router/node": "^7.0.0",
     "@tabler/icons-react": "^3.29.0",
-    "chokidar": "^4.0.3",
     "dotenv": "^16.4.7",
     "fastify": "^5.3.3",
-    "framer-motion": "^12.0.6",
     "heroku-langchain": "^0.2.1",
-    "isbot": "^5.1.22",
+    "isbot": "^5",
     "langchain": "^0.3.15",
     "pdf-parse": "^1.1.1",
     "pg": "^8.13.1",
