update to react-router-serve

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-router build",
     "dev": "react-router dev",
     "prettier": "prettier --write .",
-    "start": "NODE_ENV=production node server.js",
+    "start": "react-router-serve ./build/server/index.js",
     "test": "vitest --run",
     "test:watch": "vitest",
     "typecheck": "tsc",
@@ -50,18 +50,14 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.740.0",
     "@aws-sdk/lib-storage": "^3.740.0",
-    "@fastify/formbody": "^8.0.2",
-    "@fastify/multipart": "^9.0.3",
     "@langchain/community": "^0.3.28",
     "@langchain/core": "^0.3.57",
     "@mantine/core": "^8.1.0",
     "@mantine/hooks": "^8.1.0",
-    "@mcansh/remix-fastify": "^4.1.0",
     "@mjackson/form-data-parser": "^0.8.0",
     "@react-router/node": "^7.0.0",
+    "@react-router/serve": "^7.6.2",
     "@tabler/icons-react": "^3.29.0",
-    "dotenv": "^16.4.7",
-    "fastify": "^5.3.3",
     "heroku-langchain": "^0.2.1",
     "isbot": "^5",
     "langchain": "^0.3.15",
