--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@react-router/node": "^7.0.0",
     "@react-router/serve": "^7.6.2",
     "@tabler/icons-react": "^3.29.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "heroku-langchain": "^0.2.1",
     "isbot": "^5",
     "langchain": "^0.3.15",
@@ -66,7 +67,9 @@
     "pgvector": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router": "^7.0.0"
+    "react-markdown": "^10.1.0",
+    "react-router": "^7.0.0",
+    "react-syntax-highlighter": "^15.6.1"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
